# direttore

./: .env.example  .gitignore  Dockerfile.api  README.md  curl_out.txt  deploy.py  direttore.db  docker-compose.dev.yml  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.yml  install-netbox.sh  inventory.py  main.py  patch.bash  pyproject.toml  requirements-api.txt  scheduler.py  snmp_to_netbox.sh
api/: auth.py  config.py  db.py  deps.py  main.py  models.py
api/proxmox/: client.py  containers.py  network.py  storage.py  templates.py  vms.py
api/routes/: auth.py  inventory.py  proxmox.py  reservations.py  users.py
api/schemas/: inventory.py  proxmox.py  reservations.py
api/scripts/: init_proxmox_node.sh  seed_test_resources.sh
api/services/netbox/: client.py
api/services/proxmox/: client.py  containers.py  network.py  storage.py  templates.py  vms.py
docs/: network_automation_plan.md
docs/nginx/: direttore.conf  websocket_map.conf
frontend/: index.html  nginx.conf  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  index.css
frontend/src/api/: client.js  netbox.js  proxmox.js  reservations.js
frontend/src/components/: Layout.jsx  NetBoxNicPicker.jsx  (+1 more)
nornir-examples/: README.md  arista-bgp  junos-bgp  mikrotik-firewall  nokia-isis  panos-secpol
systemd/: direttore-api.service  direttore-frontend.service
templates/arista/: bgp.j2
templates/html/: index.html
templates/junos/: bgp.j2
templates/mikrotik/: firewall.j2
templates/nokia-sros/: isis.j2
templates/panos/: security-policy.j2
(+19 files in other folders)
